# xme

./: LICENSE  README.md  app.py  pyproject.toml
examples/: build_xme_list.py
notebooks/: run_xme_phases.ipynb
outputs/: phase_i_core.csv  phase_ii_core.csv  phase_iii_core.csv  xme_phase_core.csv  xme_phase_core.json  xme_phase_extended.csv  xme_phase_extended.json  xme_phase_refs.bib
src/xme_phases/: __init__.py  builder.py  cli.py  hgnc.py  models.py  references.py  rules.py
tests/: test_rules.py
